--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,14 @@ certifi==2025.7.9
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+dnspython==2.8.0
 ecdsa==0.19.1
+email-validator==2.3.0
 fastapi==0.116.0
 greenlet==3.2.3
 h11==0.16.0
 idna==3.10
+Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
 pyasn1==0.6.1
