--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ idna==3.10
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
+psycopg2==2.9.11
 pyasn1==0.6.1
 pydantic==2.11.7
 pydantic-settings==2.10.1
