--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ alembic==1.16.4
 annotated-types==0.7.0
 anyio==4.9.0
 asyncpg==0.30.0
-certifi==2025.7.9
+attrs==25.4.0
+certifi==2025.10.5
+cffi==2.0.0
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
@@ -16,20 +18,29 @@ idna==3.10
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
+outcome==1.3.0.post0
 psycopg2==2.9.11
 pyasn1==0.6.1
+pycparser==2.23
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
+PySocks==1.7.1
 python-dotenv==1.1.1
 python-jose==3.5.0
 requests==2.32.4
 rsa==4.9.1
+selenium==4.37.0
 six==1.17.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.41
 starlette==0.46.2
+trio==0.31.0
+trio-websocket==0.12.2
+typing-extensions==4.14.1
 typing-inspection==0.4.1
-typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.35.0
+websocket-client==1.9.0
+wsproto==1.2.0
