--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
 outcome==1.3.0.post0
+packaging==25.0
 psycopg2==2.9.11
 pyasn1==0.6.1
 pycparser==2.23
@@ -42,5 +43,6 @@ typing-extensions==4.14.1
 typing-inspection==0.4.1
 urllib3==2.5.0
 uvicorn==0.35.0
+webdriver-manager==4.0.2
 websocket-client==1.9.0
 wsproto==1.2.0
